syntax = "proto3";
option csharp_namespace = "Phorkus.Proto";

import "default.proto";
import "transaction.proto";

/* TODO: "this code should be refactored" */

message ConsensusChangeView {
    uint32 new_view_number = 1;
}

message ConsensusPrepareRequest {
    uint64 nonce = 1;
    repeated UInt256 transaction_hashes = 2;
    Transaction miner_transaction = 3;
    Signature signature = 4;
}

message ConsensusPrepareResponse {
    Signature signature = 1;
}

message ConsensusPayload {
    enum ConsensusPayloadType {
        CONSENSUS_PAYLOAD_TYPE_CHANGE_VIEW = 0x00;
        CONSENSUS_PAYLOAD_TYPE_PREPARE_REQUEST = 0x20;
        CONSENSUS_PAYLOAD_TYPE_PREPARE_RESPONSE = 0x21;
    }
    uint32 version = 1;
    UInt256 prev_hash = 2;
    uint64 block_index = 3;
    uint32 validator_index = 4;
    uint64 timestamp = 5;
    uint32 view_number = 6;
    ConsensusPayloadType type = 7;
    oneof message {
        ConsensusChangeView change_view = 8;
        ConsensusPrepareRequest prepare_request = 9;
        ConsensusPrepareResponse prepare_response = 10;
    }
}

message ConsensusMessage {   
    ConsensusPayload payload = 1;
    Signature signature = 2;
}